fix: add scrollbar-gutter to contact lists, fix form and modal css

--- a/src/dotnet/Chat.UI.Blazor/Components/ChatSettings/chat-settings-modal.css
+++ b/src/dotnet/Chat.UI.Blazor/Components/ChatSettings/chat-settings-modal.css
@@ -5,7 +5,7 @@
 
 .edit-settings-modal.modal-frame {
     @apply px-0;
-    @apply gap-y-0;
+    @apply md:gap-y-0;
 }
 
 .edit-settings-modal .no-padding-header-decorator {
